<resources>
    <string name="app_name">SharedPreferenceApp</string>
    <string name="text_login">Login</string>
    <string name="text_hint_username">Enter username</string>
    <string name="text_hint_password">Enter password</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_age">Enter your age</string>
    <string name="btn_text_submit">Submit</string>
    <string name="btn_text_read">Read data</string>
    <string name="btn_text_write">Write data</string>
    <string name="title_activity_read_write_data">ReadWriteDataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>