<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shared Preferences Demo"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_name"
        android:padding="10dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_age"
        android:padding="10dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_text_submit"
        />
</LinearLayout>