<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editor"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/edit_text_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_name"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:gravity="left"
        android:minLines="15"
        android:scrollbars="vertical"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100"
        >
        <Button
            android:id="@+id/btn_read"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="50"
            android:text="@string/btn_text_read"
            android:layout_marginRight="5dp"
            android:onClick="readFile"
            />
        <Button
            android:id="@+id/btn_write"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="50"
            android:text="@string/btn_text_write"
            android:layout_marginLeft="5dp"
            android:onClick="writeToFile"
            />
    </LinearLayout>
</LinearLayout>